WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65954
DFG JIT heap prediction causes regressions when combined with aggressive integer prediction
https://bugs.webkit.org/show_bug.cgi?id=65954
Summary
DFG JIT heap prediction causes regressions when combined with aggressive inte...
Filip Pizlo
Reported
2011-08-09 19:05:50 PDT
Both of these patches produced speed-ups by themselves:
https://bugs.webkit.org/show_bug.cgi?id=65883
https://bugs.webkit.org/show_bug.cgi?id=65949
But when combined, they produce slow-downs. Because the latter one was a bigger speed-up, the former should probably be disabled until the reasons behind the regressions are better understood.
Attachments
the patch
(1.36 KB, patch)
2011-08-09 19:09 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-08-09 19:09:09 PDT
Created
attachment 103430
[details]
the patch This improves performance on v8-crypto by 20%, bringing us back to where we were before we regressed. It does *not* remove the heap load prediction capability; it merely disables it, making it easier to reenable it if we figure out what is going wrong.
Gavin Barraclough
Comment 2
2011-08-09 22:28:43 PDT
Comment on
attachment 103430
[details]
the patch Seems like the smart move. Should probably revert properly if we don't get these working well together, but this seems a sensible step for now.
Filip Pizlo
Comment 3
2011-08-09 23:09:32 PDT
Comment on
attachment 103430
[details]
the patch Tests pass, ready to land.
WebKit Review Bot
Comment 4
2011-08-10 00:07:12 PDT
Comment on
attachment 103430
[details]
the patch Clearing flags on attachment: 103430 Committed
r92750
: <
http://trac.webkit.org/changeset/92750
>
WebKit Review Bot
Comment 5
2011-08-10 00:07:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug