DFG JIT heap prediction causes regressions when combined with aggressive integer prediction https://bugs.webkit.org/show_bug.cgi?id=65954

Reviewed by Gavin Barraclough.

Disabled heap prediction, but did not remove the capability.
This improves V8 crypto performance by 20%.

* dfg/DFGGraph.h:
(JSC::DFG::Graph::predict):


git-svn-id: svn://svn.chromium.org/blink/trunk@92750 bbb929c8-8fbe-4397-9dbb-9b2b20218538